[gd_scene load_steps=6 format=3 uid="uid://bm3ah53bofacd"]

[ext_resource type="Script" path="res://Scripts/UI/start_ui.gd" id="1_fclaj"]
[ext_resource type="Texture2D" uid="uid://dtkydo6kjedlt" path="res://Art/UI/BACKGROUND.png" id="1_oubs1"]
[ext_resource type="Theme" uid="uid://bp556hodxijho" path="res://Themes/Main Theme.tres" id="3_t0rgd"]
[ext_resource type="FontFile" uid="uid://46l121pcrkpu" path="res://Fonts/Farro-Medium.otf" id="4_x6d08"]
[ext_resource type="Theme" uid="uid://biecx1s4qgwjo" path="res://Themes/Blank Theme.tres" id="5_hydvs"]

[node name="StartUI" type="Control" node_paths=PackedStringArray("start_prompt", "start_label", "line_edit")]
layout_mode = 3
anchors_preset = 0
offset_right = 800.0
offset_bottom = 600.0
script = ExtResource("1_fclaj")
start_prompt = NodePath("Start Prompt")
start_label = NodePath("Start Prompt/Label")
line_edit = NodePath("Start Prompt/PlayerEdit Name")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(402, 300)
texture = ExtResource("1_oubs1")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 312.0
offset_top = 456.0
offset_right = 712.0
offset_bottom = 584.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("3_t0rgd")
text = "MAIN MENU"

[node name="Start Save 3" type="Button" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 112.0
offset_right = 920.0
offset_bottom = 240.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("3_t0rgd")
text = "START SAVE 3"

[node name="Start Save 2" type="Button" parent="."]
layout_mode = 0
offset_left = 313.0
offset_top = 112.0
offset_right = 713.0
offset_bottom = 240.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("3_t0rgd")
text = "START SAVE 2"

[node name="Start Save 1" type="Button" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 112.0
offset_right = 504.0
offset_bottom = 240.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("3_t0rgd")
text = "START SAVE 1"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 48.0
offset_right = 484.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_x6d08")
theme_override_font_sizes/font_size = 30
text = "Start Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start Prompt" type="Panel" parent="."]
layout_mode = 0
offset_left = 249.0
offset_top = 216.0
offset_right = 569.0
offset_bottom = 408.0
theme = ExtResource("3_t0rgd")

[node name="Label" type="Label" parent="Start Prompt"]
layout_mode = 0
offset_left = 19.0
offset_top = 16.0
offset_right = 299.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Creating new Save Game...
Enter your name:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerEdit Name" type="LineEdit" parent="Start Prompt"]
layout_mode = 0
offset_left = 40.0
offset_top = 99.0
offset_right = 280.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 15

[node name="Cancel" type="Button" parent="Start Prompt"]
layout_mode = 0
offset_left = 168.0
offset_top = 146.0
offset_right = 264.0
offset_bottom = 177.0
theme = ExtResource("5_hydvs")
theme_override_font_sizes/font_size = 13
text = "Cancel"

[node name="Start Game" type="Button" parent="Start Prompt"]
layout_mode = 0
offset_left = 55.0
offset_top = 146.0
offset_right = 151.0
offset_bottom = 177.0
theme = ExtResource("5_hydvs")
theme_override_font_sizes/font_size = 13
text = "Start Game"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Start Save 3" to="." method="_on_start_save_3_pressed"]
[connection signal="pressed" from="Start Save 2" to="." method="_on_start_save_2_pressed"]
[connection signal="pressed" from="Start Save 1" to="." method="_on_start_save_1_pressed"]
[connection signal="pressed" from="Start Prompt/Cancel" to="." method="close_start_prompt"]
[connection signal="pressed" from="Start Prompt/Start Game" to="." method="start_game"]
